--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1176,3 +1176,59 @@ a {
 .cid-s48P1Icc8J .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-sylMx3tmhc {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fafafa;
+}
+.cid-sylMx3tmhc .card:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+.cid-sylMx3tmhc .card-wrapper {
+  background-color: #ffffff;
+  border-radius: 4px;
+}
+.cid-sylMx3tmhc .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sylMx3tmhc .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-sylMx3tmhc .social-row .soc-item .mbr-iconfont {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+  transition: all 0.3s;
+}
+.cid-sylMx3tmhc .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-sylMx3tmhc .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-sylMx3tmhc .card-box {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-sylMx3tmhc .card-box {
+    padding-right: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sylMx3tmhc .card-box {
+    padding-left: 2rem;
+    padding-right: 4rem;
+  }
+}
